--- a/ts-service/package.json
+++ b/ts-service/package.json
@@ -11,6 +11,7 @@
     "fastify": "^4.28.1"
   },
   "devDependencies": {
+    "@types/node": "^25.0.2",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
