--- a/ts-service/package.json
+++ b/ts-service/package.json
@@ -8,7 +8,10 @@
     "start": "node --enable-source-maps dist/server.js"
   },
   "dependencies": {
-    "fastify": "^4.28.1"
+    "dotenv": "^17.2.3",
+    "fastify": "^4.28.1",
+    "knex": "^3.1.0",
+    "mysql2": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^25.0.2",
